Notes/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files (x86)\BlueJ\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
C:\Program Files (x86)\BlueJ\lib\bluejcore.jar;C:\Program Files (x86)\BlueJ\lib\junit-4.11.jar;C:\Program Files (x86)\BlueJ\lib\hamcrest-core-1.3.jar;C:\Program Files (x86)\BlueJ\lib\lang-stride.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-core.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-device.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-gpio-extension.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-service.jar;C:\Users\y4m3\Documents\GitHub\AP-CSA\Notes
-d
C:\Users\y4m3\Documents\GitHub\AP-CSA\Notes\doc
-encoding
UTF-8
-charset
UTF-8
C:\Users\y4m3\Documents\GitHub\AP-CSA\Notes\Array.java
<---- end of javadoc command ---->
Loading source file C:\Users\y4m3\Documents\GitHub\AP-CSA\Notes\Array.java...
C:\Users\y4m3\Documents\GitHub\AP-CSA\Notes\Array.java:41: error: illegal start of expression
       for(){
           ^
C:\Users\y4m3\Documents\GitHub\AP-CSA\Notes\Array.java:41: error: illegal start of expression
       for(){
            ^
C:\Users\y4m3\Documents\GitHub\AP-CSA\Notes\Array.java:41: error: ';' expected
       for(){
             ^
C:\Users\y4m3\Documents\GitHub\AP-CSA\Notes\Array.java:42: error: illegal start of expression
        System.out.println();   
              ^
C:\Users\y4m3\Documents\GitHub\AP-CSA\Notes\Array.java:42: error: ')' expected
        System.out.println();   
               ^
C:\Users\y4m3\Documents\GitHub\AP-CSA\Notes\Array.java:42: error: illegal start of expression
        System.out.println();   
                  ^
C:\Users\y4m3\Documents\GitHub\AP-CSA\Notes\Array.java:42: error: ';' expected
        System.out.println();   
                          ^
C:\Users\y4m3\Documents\GitHub\AP-CSA\Notes\Array.java:42: error: variable declaration not allowed here
        System.out.println();   
                   ^
8 errors
